# RNA-secondary-structure-prediction

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  requirements.txt  todo.txt
app/: CMakeLists.txt  main.cpp
data/: random_long.txt
docs/: CMakeLists.txt  mainpage.md
include/RNA/: NucleicAcidSequence.hpp  Predictor.hpp
include/utils/: utils.hpp  utils.hpp.in
report/: benchmark.csv  report.css  report.html  report.ipynb  report.md
scripts/: Result.xls  data_get.py  run.py
src/: CMakeLists.txt
src/RNA/: CMakeLists.txt  NucleicAcidSequence.cpp  Predictor.cpp
src/utils/: utils.cpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  benchmark.cpp
tests/benchmark/generators/: random.cpp
tests/benchmark/include/: generators.hpp
tests/predictor/: CMakeLists.txt  predictor_test.cpp
